--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="stylesheet" href="css/styles.css">
-</head>
+
 <body>
 
-<div class="wrapper">
-  <div class="left_container">
-    
-  </div>
-</div>
+<p>pwet ka talaga</p>
 
 </body>
 </html>
