--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
 <body>
 
-<p>pwet ka talaga</p>
+<div class="wrapper">
+  <div class="left_container">
+    
+  </div>
+</div>
 
 </body>
 </html>
