--- a/index.html
+++ b/index.html
@@ -2,12 +2,32 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
 
 <div class="wrapper">
   <div class="left_container">
+    <div class="title_text">
+      LIBUNAO, CHRISTIAN ARVEE R.
+    </div>
     
+    <div class="introduction">
+      I am a mix of Graphic Designer and a Programmer, being a graduate of Bachelor of Science Information Technology with a specialization of Digital Arts I can utilize both skill.
+    </div>
+    <div class="homepage_btn">
+      <button><i class="fa-solid fa-house"></i>HOMEPAGE</button>
+    </div>
+    <div class="follow_me_container">
+      <div>Follow Me</div>
+      <div><hr></div>
+      <div>
+        <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
+        <i class="fa-brands fa-twitter" style="color: #ffffff;"></i>
+        <i class="fa-brands fa-square-instagram" style="color: #ffffff;"></i>
+        <i class="fa-brands fa-discord" style="color: #ffffff;"></i>
+      </div>
+    </div>
   </div>
 </div>
 
