--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     </div>
     <div class="bottom">
         <div class="follow_me_container">
-        <div>Follow Me</div>
-        <div><hr></div>
-        <div>
-          <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
-          <i class="fa-brands fa-twitter" style="color: #ffffff;"></i>
-          <i class="fa-brands fa-square-instagram" style="color: #ffffff;"></i>
-          <i class="fa-brands fa-discord" style="color: #ffffff;"></i>
-        </div>
+          <div>Follow Me</div>
+          <div><hr></div>
+          <div class="soc_icons">
+            <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
+            <i class="fa-brands fa-twitter" style="color: #ffffff;"></i>
+            <i class="fa-brands fa-square-instagram" style="color: #ffffff;"></i>
+            <i class="fa-brands fa-discord" style="color: #ffffff;"></i>
+          </div>
       </div>
     </div>
     
