--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
             <i class="fa-brands fa-twitter" style="color: #ffffff;"></i>
             <i class="fa-brands fa-square-instagram" style="color: #ffffff;"></i>
-            <a href="https://discordapp.com/users/710153749171273840"><i class="fa-brands fa-discord" style="color: #ffffff;"></i></a>
+            <a href="https://discordapp.com/users/710153749171273840" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-discord" style="color: #ffffff;"></i></a>
           </div>
       </div>
     </div>
